--- a/resnet_implementation.ipynb
+++ b/resnet_implementation.ipynb
@@ -13,15 +13,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install torch\n",
-    "%pip install numpy\n",
-    "%pip install matplotlib\n",
-    "%pip install torchvision\n",
-    "%pip install pandas\n",
-    "%pip install os\n",
-    "%pip install PIL\n",
-    "%pip install tqdm\n",
-    "%pip install albumentations"
+    "# !pip install torch\n",
+    "# !pip install numpy\n",
+    "# !pip install matplotlib\n",
+    "# !pip install torchvision\n",
+    "# !pip install pandas\n",
+    "# !pip install os\n",
+    "# !pip install PIL\n",
+    "# !pip install tqdm\n",
+    "# !pip install albumentations"
    ]
   },
   {
